--- a/YT.css
+++ b/YT.css
@@ -231,6 +231,7 @@ body {
     gap: 20px;
     rder: 5px dotted red;
     padding: 5px;
+    border: 5px dotted red;
 }
 /* end ----------- layout*/
 
