--- a/YT.css
+++ b/YT.css
@@ -317,3 +317,75 @@ iframe.iframe {
     background-color: green;
 }
 
+
+
+/* start spinner ---------------------------------------------------------------------------*/
+.loader-wrapper {
+    display: grid;
+    place-content: center;
+    position:fixed;
+    inset: 0;
+    z-index:10;
+}
+
+.loader {
+  border: 4px solid lightgrey;
+  border-radius: 50%;
+  border-top: 4px solid red;
+  width: 100px;
+  height: 100px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.inner-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+  .countdown {
+    width: max-content;
+    font-size: 30px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.circle-wrapper {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.thumbnail{
+    display: none;
+}
+
+.seconds {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+
+  font-size: 25px;
+  font-weight: 500;
+  font-family: sans-serif;
+
+  background-color: lightgray; 
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* end spinner ---------------------------------------------------------------------------*/
+
